Fixed message wrap text

--- a/client/src/Styles/ChatWindow.css
+++ b/client/src/Styles/ChatWindow.css
@@ -37,6 +37,7 @@ max-width: 100%;
     padding: 5px;
     text-align: left;
     width: 300px;
+    overflow-wrap: break-word;
 }
 
 .ChatMessage {
